# realtime-data-streaming

./: .gitignore  pyproject.toml
docker/: docker-compose.yaml
docker/airflow/dags/: kafka_stream.py
docker/kafka/broker/: dockerfile
docker/kafka/control-center/: dockerfile
docker/kafka/schema-registry/: dockerfile
docker/kafka/zookeeper/: dockerfile
