[tool.poetry]
name = "realtimedatastreaming"
version = "0.1.0"
description = "Realtime DataStreaming"
authors = ["marcelo.ribas <marcelo.pachione@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
